# computational-physics

./: .gitignore  Fibonacci.cpp  Ising.txt  README.md  gitignore
.github/workflows/: .unittest.yml
all_lattice/: CMakeLists.txt  Kagome_MC.cpp  MonteCarlor_kagome.h  MonteCarlosquare.h  cubic.cpp  honey.cpp  kagome  kagome.cpp  ran  ran.cpp  report by EnruiZhou.txt  square  square.cpp  square_MC.cpp  square_MC_test.cpp  sweep.txt
all_lattice/utils/: cubic.h  cubictest.cpp  honey.h  honeytest.cpp  isingsquare.h  kagome.h  kagometest.cpp  observe.h
cpp/: CMakeLists.txt  ising.hpp  ising_catch2_unittest.cpp  main  main.cpp
exercise/: Fibonacci.cpp  Ising.txt  ising.hpp
ising/: CMakeLists.txt  UnitTests.cpp  ising.h  main.cpp
kagome/: CMakeLists.txt  kagome.cpp  kagome.h
week5/: calculate.cpp  isingsquare.h
week6/: CMakeLists.txt  ising.hpp  ising_catch2_unittest.cpp  isingsquaretest.cpp  main.cpp  readme.md
第五周作业/: UnitTests.cpp  test.cpp
